# yolo-annotator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/boxlabeler/: __init__.py  __main__.py  annotator.py
src/yololabeler/: __init__.py  __main__.py  annotator.py  gui.py  label_io.py  matching.py  rendering.py  state.py  utils.py
src/yololabeler/annotation/: __init__.py  engine.py  tab.py
src/yololabeler/review/: __init__.py  engine.py  tab.py
tests/: test_annotation_engine.py  test_label_io.py  test_matching.py  test_review_engine.py
