[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "boxlabeler"
version = "0.1.0"
description = "Lightweight desktop tool for drawing YOLO bounding-box annotations on images."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Nathan Miller" },
    { name = "Zack Loken" },
]
keywords = ["yolo", "annotation", "bounding-box", "object-detection", "labeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "Pillow>=9.0",
]

[project.scripts]
boxlabeler = "boxlabeler:main"

[project.urls]
Homepage = "https://github.com/ZackLoken/yolo-annotator.git"

[tool.setuptools.packages.find]
where = ["src"]
