[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boxlabeler"
version = "0.1.0"
description = "Image annotation tool for YOLO training - draw bounding boxes and export in YOLO format"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nathan Miller"},
    {name = "Zack Loken"},
]
dependencies = [
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/ZackLoken/yolo-annotator"

[project.scripts]
boxlabeler = "boxlabeler:main"

[tool.setuptools.packages.find]
where = ["src"]
