[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yololabeler"
version = "4.0.0"
description = "Image annotation tool for YOLO training - draw bounding boxes and polygons, export in YOLO detection + segmentation format"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nathan Miller"},
    {name = "Zack Loken"},
]
dependencies = [
    "Pillow>=9.0",
    "customtkinter>=5.0",
    "shapely>=2.0",
]

[project.urls]
Homepage = "https://github.com/ZackLoken/yolo-annotator"

[project.scripts]
yololabeler = "yololabeler:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yololabeler = ["assets/*"]
